--- a/index.html
+++ b/index.html
@@ -761,23 +761,21 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<!--<img class="team-member-picture" src="" alt="">
+								<img class="team-member-picture" src="images/contents/jury/philippe-commaret.jpg" alt="Philippe Commaret">
 								<div class="team-member-text">
-									<h4 class="team-member-name"></h4>
-									<div class="team-member-position"></div>
-									<p class="team-member-description"></p>
-								</div>-->
+									<h4 class="team-member-name">Philippe Commaret</h4>
+									<div class="team-member-position">Directeur ÉS Énergies Strasbourg</div>
+								</div>
 							</div>
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<!--<img class="team-member-picture" src="" alt="">
+								<img class="team-member-picture" src="images/contents/jury/jean-claude-mutschler.jpg" alt="Jean-Claude Mutschler">
 								<div class="team-member-text">
-									<h4 class="team-member-name"></h4>
-									<div class="team-member-position"></div>
-									<p class="team-member-description"></p>
-								</div>-->
+									<h4 class="team-member-name">Jean-Claude Mutschler</h4>
+									<div class="team-member-position">Directeur ESR</div>
+								</div>
 							</div>
 						</div>
 
