--- a/index.html
+++ b/index.html
@@ -826,8 +826,8 @@
 							<div class="row">
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
-									<h3>Prix ALSACE DIGITALE</h3>
-									<p>Les lauréats Alsace Digitale auront accès à l’espace Flex pendant 6 mois pour tous les membres de l’équipe, ainsi qu’un accès gratuit à tous les évènements organisés par l’association juqu’à fin mars 2016.</p>
+									<h3>Prix ÉS</h3>
+									<p>Pour encourager la créativité et l'innovation, le groupe ES soutiendra un projet en lui ouvrant un crédit à hauteur de 2000 euros pour l'achat de matériel ou services nécessaires à la poursuite du projet (hebergement, hardware, software, imprimante 3D ...)</p>
 								</div>
 							</div>
 						</div>
@@ -849,8 +849,8 @@
 							<div class="row">
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
-									<h3>Prix ÉS</h3>
-									<p>Détails à venir</p>
+									<h3>Prix ALSACE DIGITALE</h3>
+									<p>Les lauréats Alsace Digitale auront accès à l’espace Flex pendant 6 mois pour tous les membres de l’équipe, ainsi qu’un accès gratuit à tous les évènements organisés par l’association juqu’à fin mars 2016.</p>
 								</div>
 							</div>
 						</div>
