d day message in newsbox

--- a/index.html
+++ b/index.html
@@ -148,8 +148,12 @@
 
 
 							<div class="newsbox col-md-10 col-md-offset-1">
+								
+								<strong>Jour J : </strong> Rendez-vous à l'INSA entre 17 et 18h, pensez à ramener tout ce dont vous aurez besoin (pc, rallonges, multiprises, feutres, post-its, motivation...). Des questions ? Posez-les nous via twitter en mentionnant @AlsaceDigitale et avec le hashtag #HICamp. A ce soir !
+								<div class="row"><div style="opacity: 0.15;" class="col-xs-2 col-xs-offset-5"><hr></div></div><br>
 								<strong>Etudiants ou demandeurs d'emplois ? Utilisez le code promo <span style="font-size: 16px;">HICETNUNC</span> en <a href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" target="_blank">prennant votre billet</a>.</strong><br>
 								Etudiants boursiers ? Contactez <a href="mailto:contact@alsacedigitale.org">contact@alsacedigitale.org</a>
+
 							</div>
 
 							<div class="hero-features row">
