--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<!--<li><a href="#faq">FAQ</a></li>-->
 
 							<!-- HEADER ACTION BUTTON -->
-							<li class="header-action-button"><a target="_blank" href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" class="btn btn-primary">S'inscrire</a></li>
+							<!--<li class="header-action-button"><a target="_blank" href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" class="btn btn-primary">S'inscrire</a></li>-->
 							<li class="header-action-button"><a target="_blank" href="http://hackingindustrycamp.sparkboard.com" class="btn btn-primary">Les défis</a></li>
 
 						</ul>
@@ -149,10 +149,7 @@
 
 							<div class="newsbox col-md-10 col-md-offset-1">
 								
-								<strong>Jour J : </strong> Rendez-vous à l'INSA entre 17 et 18h, pensez à ramener tout ce dont vous aurez besoin (pc, rallonges, multiprises, feutres, post-its, motivation...). Des questions ? Posez-les nous via twitter en mentionnant @AlsaceDigitale et avec le hashtag #HICamp. A ce soir !
-								<div class="row"><div style="opacity: 0.15;" class="col-xs-2 col-xs-offset-5"><hr></div></div><br>
-								<strong>Etudiants ou demandeurs d'emplois ? Utilisez le code promo <span style="font-size: 16px;">HICETNUNC</span> en <a href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" target="_blank">prennant votre billet</a>.</strong><br>
-								Etudiants boursiers ? Contactez <a href="mailto:contact@alsacedigitale.org">contact@alsacedigitale.org</a>
+								<strong>C'est parti ! Rendez-vous aux <a href="#keynotes">keynotes samedi</a> et dimanche à 16h30 pour les démos et résultats des défis.<br> Suivez l'aventure des participants sur twitter avec le hashtag <a href="https://twitter.com/search?q=%23HICamp">#HICamp</a>
 
 							</div>
 
