--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 							<div class="newsbox col-md-10 col-md-offset-1">
 								
-								<strong>C'est parti ! Rendez-vous aux <a href="#keynotes">keynotes samedi</a> et dimanche à 16h30 pour les démos et résultats des défis.<br> Suivez l'aventure des participants sur twitter avec le hashtag <a href="https://twitter.com/search?q=%23HICamp">#HICamp</a>
+								<strong>C'est parti ! Rendez-vous ce dimanche à 16h30 pour les démos et résultats des défis.<br> Suivez l'aventure des participants sur twitter avec le hashtag <a href="https://twitter.com/search?q=%23HICamp">#HICamp</a>
 
 							</div>
 
