--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 							<li><a href="#keynotes">Keynotes</a></li>
 							<li><a href="#coachs">Coachs &amp; Jury</a>
 							<li><a href="#prizes">Prix</a>
+							<li><a href="#winners">Résultats</a>
 							<!--<li><a href="#faq">FAQ</a></li>-->
 
 							<!-- HEADER ACTION BUTTON -->
@@ -147,11 +148,10 @@
 							</div>
 
 
-							<div class="newsbox col-md-10 col-md-offset-1">
-								
-								<strong>C'est parti ! Rendez-vous ce dimanche à 16h30 pour les démos et résultats des défis.<br> Suivez l'aventure des participants sur twitter avec le hashtag <a href="https://twitter.com/search?q=%23HICamp">#HICamp</a>
+							<!--<div class="newsbox col-md-10 col-md-offset-1">
+											
 
-							</div>
+							</div>-->
 
 							<div class="hero-features row">
 
@@ -189,7 +189,9 @@
 									</ul>
 		
 									<div class="hero-buttons col-md-12 text-center">
-										<a href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>
+										<!--<a href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>-->
+										<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>
+
 									</div>
 
 								</div>
@@ -862,6 +864,49 @@
 
 			</section>
 
+			<section id="winners" class="section">
+
+				<div class="container">
+
+					<h2 class="section-heading text-center">Les résultats</h2>
+
+					<p class="col-md-12 text-center">Pas moins de 11 prototypes de projets sont sortis de cette édition 2015, et 7 d'entre eux ont été primés</strong></p>
+
+					<ul class="col-md-6 col-md-offset-3">
+						<li><i class="fa fa-trophy"></i> Prix Scalingo 1 : <a href="http://hackingindustrycamp.sparkboard.com/project/560bd14850d3bd03007a0672" target="_blank"> #2 Esybill</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Scalingo 2 : <a href="http://hackingindustrycamp.sparkboard.com/project/560aab73cd9f050300c68067" target="_blank"> #1 Le tableau connecté de la Smarthome</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Scalingo 3 : <a href="http://hackingindustrycamp.sparkboard.com/project/560bd7e550d3bd03007a0681" target="_blank"> #8 Data Visualisation</a></li>
+						<li><i class="fa fa-trophy"></i> Prix La Fabrique : <a href="http://hackingindustrycamp.sparkboard.com/project/5611a1e158775503002bcbb3" target="_blank"> #22 Looky Lux</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Alsace Digitale : <a href="http://hackingindustrycamp.sparkboard.com/project/560e7a4cee247f0300aa3fb7" target="_blank"> #21 Interfacile</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Rhenatoo : <a href="http://hackingindustrycamp.sparkboard.com/project/560d7de8b6934b0300925c44" target="_blank"> #20 Wine Cluster</a></li>
+						<li><i class="fa fa-trophy"></i> Prix PR World Media : <a href="http://hackingindustrycamp.sparkboard.com/project/560bd90950d3bd03007a0689" target="_blank"> #12 Chasse O Gaspi</a></li>
+						<li><i class="fa fa-trophy"></i> Prix ES : <a href="http://hackingindustrycamp.sparkboard.com/project/5611a1e158775503002bcbb3" target="_blank"> #22 Looky Lux</a></li>
+					</ul>
+
+				</div>
+
+			</section>
+
+			<section id="closing" class="closing-section section-dark section">
+
+				<div class="section-background">
+
+					<div class="section-background-image parallax" data-stellar-ratio="0.4">
+						<img src="images/backgrounds/MakerBot_Replicator_2.jpg" alt="" style="opacity: 0.15;">
+					</div>
+
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-12">
+							<h3 class="closing-shout">L'événement #HICamp 2015 est fini, voici quelques clichés pris sur le week-end</h3>
+
+							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://www.leamariette.fr/hacking-industrie-camp/"class="btn btn-lg btn-primary" target="_blank">Voir les photos</a></div>
+						</div>
+					</div>
+				</div>
+			</section>
+
 			<!-- FAQ
 			================================= -->
 			<section id="faq" class="faq-section section">
@@ -1001,11 +1046,10 @@
 
 			<!-- CLOSING
 			================================= -->
-			<section id="closing" class="closing-section section-dark section">
+			<!--<section id="closing" class="closing-section section-dark section">
 
 				<div class="section-background">
 
-					<!-- IMAGE BACKGROUND -->
 					<div class="section-background-image parallax" data-stellar-ratio="0.4">
 						<img src="images/backgrounds/MakerBot_Replicator_2.jpg" alt="" style="opacity: 0.15;">
 					</div>
@@ -1027,7 +1071,7 @@
 					</div>
 				</div>
 
-			</section>
+			</section>-->
 
 			<!-- FOOTER
 			================================= -->
