--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<h3 class="closing-shout">Bientôt tout les détails sur le #HICamp 2016. En attendant, replongez dans l'édition 2015 !</h3>
+							<h3 class="closing-shout">Retrouvez bientôt tous les détails sur le #HICamp 2016. En attendant, replongez dans l'édition 2015 !</h3>
 
 							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://2015.hackingindustry.camp/" class="btn btn-lg btn-primary" target="_blank">Édition 2015</a> &nbsp; <a href="http://www.leamariette.fr/hacking-industrie-camp/" class="btn btn-lg btn-primary" target="_blank">Voir les photos</a></div>
 						</div>
