--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 							<!--<li class="header-action-button"><a target="_blank" href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" class="btn btn-primary">S'inscrire</a></li>
 							<li class="header-action-button"><a target="_blank" href="http://hackingindustrycamp.sparkboard.com" class="btn btn-primary">Les défis</a></li>-->
 							<li class="header-action-button"><a target="_blank" href="http://2015.hackingindustry.camp" class="btn btn-primary">Édition 2015</a></li>
+							<li class="header-action-button"><a target="_blank" href="https://drive.google.com/file/d/0B0S2y3rk51DNMGNyNGRyYk9XakU/view?usp=sharing" class="btn btn-primary">Devenir sponsor</a></li>
 						</ul>
 
 					</nav>
