update sponsors layout

--- a/index.html
+++ b/index.html
@@ -94,8 +94,6 @@
 							<!--<li class="header-action-button"><a target="_blank" href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" class="btn btn-primary">S'inscrire</a></li>
 							<li class="header-action-button"><a target="_blank" href="http://hackingindustrycamp.sparkboard.com" class="btn btn-primary">Les défis</a></li>-->
 							<li class="header-action-button"><a target="_blank" href="http://2015.hackingindustry.camp" class="btn btn-primary">Édition 2015</a></li>
-							<li class="header-action-button"><a target="_blank" href="https://drive.google.com/file/d/0B0S2y3rk51DNNXBySjA1ald6TFE/view" class="btn btn-primary">Présentation HIC</a></li>
-							<li class="header-action-button"><a target="_blank" href="https://drive.google.com/file/d/0B0S2y3rk51DNMGNyNGRyYk9XakU/view?usp=sharing" class="btn btn-primary">Devenir sponsor</a></li>
 						</ul>
 
 					</nav>
@@ -314,14 +312,14 @@
 
 					<!-- IMAGE BACKGROUND -->
 					<div class="section-background-image parallax" data-stellar-ratio="0.4">
-						<img src="images/backgrounds/Arduino_led-4.jpg" style="opacity: 0.15;">
+						<img src="images/backgrounds/arduino.jpg" style="opacity: 0.20;">
 					</div>
 
 				</div>
 
 				<div class="container">
 
-					<h2 class="section-heading text-center hidden">Trusted by Thousands</h2>
+					<h2 class="section-heading text-center hidden">Partenaires et sponsors</h2>
 
 					<div class="testimonial-slider-row row">
 
@@ -368,12 +366,12 @@
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
-						<p>Dans le cadre de son soutien au Hacking Industry Camp, le Groupe ÉS est partie prenante de l'organisation de l'évènement.</p><br>
+						<p style="font-size: 17px;">Dans le cadre de son soutien au Hacking Industry Camp, le Groupe ÉS est partie prenante de l'organisation de l'évènement.</p><br>
 						<a href="http://www.es-groupe.fr/" target="_blank"><img src="images/contents/logo ES2.jpg" alt="Groupe ES"></a>
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
-						<p>Ces entreprises / associations soutiennent l'événement !</p><br>
+						<h3 style="font-size: 17px;">Ces entreprises / associations soutiennent l'événement !</h3><br>
 						<a href="http://www.hager.fr/" target="_blank"><img src="images/contents/logo Hager.png" alt="Hager"></a>
 						<!--<a href="http://www.socomec.fr/Accueil_fr.html" target="_blank"><img src="images/contents/socomec.png" alt="Socomec France"></a>-->
 						<!--<a href="http://www.innovation-in-design.com/" target="_blank"><img src="images/contents/logo IID.jpg" alt="Innovation In Design"></a>-->
@@ -383,10 +381,15 @@
 						<!--<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>-->
 						<!--<a href="http://prworldmedia.com/" target="_blank"><img src="images/contents/prworldmedia.jpg" alt="PR World Media"></a>-->
 						<!--<a href="http://invitethemedia.com/" target="_blank"><img src="images/contents/invitethemedia.jpg" alt="InviteTheMedia"></a>-->
+						<div class="row">
+							<p>Intéressés pour devenir sponsor ?</p>
+
+							<a target="_blank" href="https://drive.google.com/file/d/0B0S2y3rk51DNNXBySjA1ald6TFE/view" class="btn btn-primary">Présentation HIC</a> &nbsp; <a target="_blank" href="https://drive.google.com/file/d/0B0S2y3rk51DNMGNyNGRyYk9XakU/view?usp=sharing" class="btn btn-primary">Devenir sponsor</a>
+						</div>
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
-						<p>Ces institutions soutiennent l'événement !</p><br>
+						<h3 style="font-size: 17px;">Ces institutions soutiennent l'événement !</h3><br>
 						<a href="http://strasbourg.eu/" target="_blank"><img src="images/contents/banner-stras.png" alt="Strasbourg.eu"></a>
 						<a href="http://www.insa-strasbourg.fr/" target="_blank"><img src="images/contents/insa.png" alt="INSA Strasbourg"></a>			
 						<!--<a href="http://www.etena-univ.eu/" target="_blank"><img src="images/contents/pepite.jpg" alt="Pepite"></a>-->
@@ -394,7 +397,7 @@
 						<a href="http://www.lafrenchtech-alsace.eu/" target="_blank"><img src="images/contents/fta-iot-manufacturing.png" alt="La French Tech Alsace"></a>
 						<a href="http://www.creaccro.eu/" target="_blank"><img src="images/contents/accro.jpg" alt="Accro"></a>
 						<a href="http://alsace.cci.fr/" target="_blank"><img src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a>
-					</div>
+					</div>						
 
 				</div>
 
