--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 							<li><a href="#faq">FAQ</a></li>
 
 							<!-- HEADER ACTION BUTTON -->
-							<!--<li class="header-action-button"><a target="_blank" href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" class="btn btn-primary">S'inscrire</a></li>
-							<li class="header-action-button"><a target="_blank" href="http://hackingindustrycamp.sparkboard.com" class="btn btn-primary">Les défis</a></li>-->
+							<li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2016-27211092109" class="btn btn-primary">S'inscrire</a></li>
+							<li class="header-action-button"><a target="_blank" href="http://hic2016.sparkboard.com" class="btn btn-primary">Les défis</a></li>
 							<li class="header-action-button"><a target="_blank" href="http://2015.hackingindustry.camp" class="btn btn-primary">Édition 2015</a></li>
 						</ul>
 
@@ -163,7 +163,7 @@
 										<a class="btn btn-default" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/worshop-hacking-industry-camp-2-31-08-17h" target="_blank">31/08 de 17 à 21h chez Velum Bischoffsheim</a>
 									</div>
 								</div>
-								<div class="row">
+								<div class="row" style="margin-bottom: 5px;">
 									<div class="col-md-6">
 										<a class="btn btn-default" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/workshop-09-09-9h-hic-3-1" target="_blank">09/09 de 9 à 13h à le Fédération des Industries d'Alsace</a>
 									</div>
