--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
 									</ul>
 		
 									<div class="hero-buttons col-md-12 text-center">
-										<!--<a href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>-->
+										<a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2016-27211092109" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>
 										<!--<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>-->
-										<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>
+										<!--<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>-->
 
 									</div>
 
@@ -910,15 +910,22 @@
 					</div>
 
 				</div>
+
 				<div class="container">
 					<div class="row">
-						<div class="col-md-12">
-							<h3 class="closing-shout">Retrouvez bientôt tous les détails sur le #HICamp 2016. En attendant, replongez dans l'édition 2015 !</h3>
+						<div class="col-md-6">
+							<h3 class="closing-shout">Prêt à passer à l'action ? La première étape c'est de vous inscrire !</h3>
 
-							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://2015.hackingindustry.camp/" class="btn btn-lg btn-primary" target="_blank">Édition 2015</a> &nbsp; <a href="http://www.leamariette.fr/hacking-industrie-camp/" class="btn btn-lg btn-primary" target="_blank">Voir les photos</a></div>
+							<div class="closing-buttons" data-animation="tada"><a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2016-27211092109" class="btn btn-lg btn-primary">J'y vais !</a></div>
+						</div>
+						<div class="col-md-6">
+							<h3 class="closing-shout">Inscris ? Consultez dès à présent la liste des défis, vous pouvez également proposer le vôtre !</h3>
+
+							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://hic2016.sparkboard.com/"class="btn btn-lg btn-primary" target="_blank">Voir les défis / Proposer un défi</a></div>
 						</div>
 					</div>
 				</div>
+
 			</section>
 
 			<!-- FAQ
@@ -1056,36 +1063,7 @@
 					</div>
 				</div>
 
-			</section>
-
-			<!-- CLOSING
-			================================= -->
-			<!--<section id="closing" class="closing-section section-dark section">
-
-				<div class="section-background">
-
-					<div class="section-background-image parallax" data-stellar-ratio="0.4">
-						<img src="images/backgrounds/MakerBot_Replicator_2.jpg" alt="" style="opacity: 0.15;">
-					</div>
-
-				</div>
-
-				<div class="container">
-					<div class="row">
-						<div class="col-md-6">
-							<h3 class="closing-shout">Prêt à passer à l'action ? La première étape c'est de vous inscrire !</h3>
-
-							<div class="closing-buttons" data-animation="tada"><a href="http://www.eventbrite.fr/e/billets-hacking-industry-camp-17896068623" class="btn btn-lg btn-primary">J'y vais !</a></div>
-						</div>
-						<div class="col-md-6">
-							<h3 class="closing-shout">Inscris ? Consultez dès à présent la liste des défis, vous pouvez également proposer le vôtre !</h3>
-
-							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://hackingindustrycamp.sparkboard.com/"class="btn btn-lg btn-primary" target="_blank">Voir les défis / Proposer un défi</a></div>
-						</div>
-					</div>
-				</div>
-
-			</section>-->
+			</section>	
 
 			<!-- FOOTER
 			================================= -->
