--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
 
 							<div class="newsbox col-md-10 col-md-offset-1">
 								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Workshops de préparation les 31/08 et 09/09</div>
-								Pour cette deuxième édition, <a href="http://www.rhenatic.eu/" target="_blank">Rhenatic</a> s’associe à <a href="http://alsacedigitale.org" target="_blank">Alsace Digitale</a> pour créer des <strong>workshops</strong> en amont du Hacking Industry Camp.<br>
+								<p style="margin: 0;">Pour cette deuxième édition, <a href="http://www.rhenatic.eu/" target="_blank">Rhenatic</a> s’associe à <a href="http://alsacedigitale.org" target="_blank">Alsace Digitale</a> pour créer des <strong>workshops</strong> en amont du Hacking Industry Camp.<br>
 								Deux sessions d’idéation de deux demi-journées, animées par la société Xfives sont proposées.<br>
-								L’idée est de transformer vos problématiques en défis prêts à être lancés le temps d’un week-end.<br><br>
+								L’idée est de transformer vos problématiques en défis prêts à être lancés le temps d’un week-end.<br><br></p>
 								<div class="row" style="margin-bottom: 15px;">
 									<div class="col-md-6">
 										<a class="btn btn-default" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/worshop-hacking-industry-camp-1" target="_blank">31/08 de 9 à 13h chez Siemens Schiltigheim</a>
@@ -163,7 +163,7 @@
 										<a class="btn btn-default" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/worshop-hacking-industry-camp-2-31-08-17h" target="_blank">31/08 de 17 à 21h chez Velum Bischoffsheim</a>
 									</div>
 								</div>
-								<div class="row" style="margin-bottom: 5px;">
+								<div class="row" style="margin-bottom: 10px;">
 									<div class="col-md-6">
 										<a class="btn btn-default" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/workshop-09-09-9h-hic-3-1" target="_blank">09/09 de 9 à 13h à le Fédération des Industries d'Alsace</a>
 									</div>
@@ -171,6 +171,7 @@
 										<a class="btn btn-default" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/workshop-09-09-9h-hic-3">09/09 de 17 à 21h chez Hager (Obernai)</a>
 									</div>
 								</div>
+								<p class="text-center">Inscription gratuite mais obligatoire</p>
 							</div>
 
 							<div class="hero-features row">
