--- a/index.html
+++ b/index.html
@@ -157,18 +157,18 @@
 								L’idée est de transformer vos problématiques en défis prêts à être lancés le temps d’un week-end.<br><br></p>
 								<div class="row" style="margin-bottom: 15px;">
 									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/worshop-hacking-industry-camp-1" target="_blank">31/08 de 9 à 13h chez Siemens Schiltigheim</a>
+										<a class="btn btn-default btn-special" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/worshop-hacking-industry-camp-1" target="_blank">31/08 de 9 à 13h chez Siemens Schiltigheim</a>
 									</div>
 									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/worshop-hacking-industry-camp-2-31-08-17h" target="_blank">31/08 de 17 à 21h chez Velum Bischoffsheim</a>
+										<a class="btn btn-default btn-special" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/worshop-hacking-industry-camp-2-31-08-17h" target="_blank">31/08 de 17 à 21h chez Velum Bischoffsheim</a>
 									</div>
 								</div>
 								<div class="row" style="margin-bottom: 10px;">
 									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/workshop-09-09-9h-hic-3-1" target="_blank">09/09 de 9 à 13h à le Fédération des Industries d'Alsace</a>
+										<a class="btn btn-default btn-special" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/workshop-09-09-9h-hic-3-1" target="_blank">09/09 de 9 à 13h à le Fédération des Industries d'Alsace</a>
 									</div>
 									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/workshop-09-09-9h-hic-3">09/09 de 17 à 21h chez Hager (Obernai)</a>
+										<a class="btn btn-default btn-special" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/workshop-09-09-9h-hic-3">09/09 de 17 à 21h chez Hager (Obernai)</a>
 									</div>
 								</div>
 								<p class="text-center">Inscription gratuite mais obligatoire</p>
