--- a/index.html
+++ b/index.html
@@ -372,6 +372,12 @@
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
+						<h3 style="font-size: 17px;">Ils prennent également part à l'organisation du HIC :</h3><br>
+						<a href="http://www.rhenatic.eu/" target="_blank"><img src="images/contents/rhenatic.png" alt="Rhénatic"></a>
+						<a href="http://www.alsacetech.org/" target="_blank"><img src="images/contents/alsacetech.jpg" alt="Alsace Tech"></a>
+					</div>
+
+					<div class="sponsors-row" data-animation="bounceIn">
 						<h3 style="font-size: 17px;">Ces entreprises / associations soutiennent l'événement !</h3><br>
 						<a href="http://www.hager.fr/" target="_blank"><img src="images/contents/logo Hager.png" alt="Hager"></a>
 						<!--<a href="http://www.socomec.fr/Accueil_fr.html" target="_blank"><img src="images/contents/socomec.png" alt="Socomec France"></a>-->
