--- a/index.html
+++ b/index.html
@@ -151,27 +151,17 @@
 
 
 							<div class="newsbox col-md-10 col-md-offset-1">
-								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Workshops de préparation les 31/08 et 09/09</div>
-								<p style="margin: 0;">Pour cette deuxième édition, <a href="http://www.rhenatic.eu/" target="_blank">Rhenatic</a> s’associe à <a href="http://alsacedigitale.org" target="_blank">Alsace Digitale</a> pour créer des <strong>workshops</strong> en amont du Hacking Industry Camp.<br>
-								Deux sessions d’idéation de deux demi-journées, animées par la société Xfives sont proposées.<br>
-								L’idée est de transformer vos problématiques en défis prêts à être lancés le temps d’un week-end.<br><br></p>
+								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Événements organisés par nos partenaires (gratuits mais sur inscription)</div>
 								<div class="row" style="margin-bottom: 15px;">
-									<div class="col-md-6">
-										<a class="btn btn-default btn-special" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/worshop-hacking-industry-camp-1" target="_blank">31/08 de 9 à 13h chez Siemens Schiltigheim</a>
+									<div class="col-md-6">									
+										<p style="margin: 0;">Dans le cadre de la journée des projets et de l'innovation de l'Ensisa, notre partenaire <a href="http://www.alsacetech.org/" target="_blank">Alace Tech</a> organise la conférence Alsace Tech 4.0 le 28/09 à 18h15 à l’ENGEES.<br><br></p>
+										<a class="btn btn-default btn-special" style="width: 100%;" href="https://www.weezevent.com/conference-alsace-tech-40-28-septembre-2016-a-l-engees" target="_blank">Conférence Alsace Tech 4.0 le 28/09 à 18h15</a>
 									</div>
-									<div class="col-md-6">
-										<a class="btn btn-default btn-special" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/worshop-hacking-industry-camp-2-31-08-17h" target="_blank">31/08 de 17 à 21h chez Velum Bischoffsheim</a>
-									</div>
-								</div>
-								<div class="row" style="margin-bottom: 10px;">
-									<div class="col-md-6">
-										<a class="btn btn-default btn-special" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/workshop-09-09-9h-hic-3-1" target="_blank">09/09 de 9 à 13h à le Fédération des Industries d'Alsace</a>
-									</div>
-									<div class="col-md-6">
-										<a class="btn btn-default btn-special" style="width: 100%;" href="https://www.helloasso.com/associations/alsace-digitale/evenements/workshop-09-09-9h-hic-3">09/09 de 17 à 21h chez Hager (Obernai)</a>
+									<div class="col-md-6">									
+										<p style="margin: 0;">La fabrication additive vous intéresse ? Rendez-vous le 29 septembre à 18h30 au Centre de culture numérique pour le prochain Créativ’Café #8 organisé par <a href="http://www.creaccro.eu/" target="_blank">Accro</a>.<br><br></p>
+										<a class="btn btn-default btn-special" style="width: 100%;" href="http://www.creaccro.eu/event/fabrication-additive-creativcafe-8-29-septembre/" target="_blank">Creativ'Café #8 le 29/09 à 18h30</a>
 									</div>
 								</div>
-								<p class="text-center">Inscription gratuite mais obligatoire</p>
 							</div>
 
 							<div class="hero-features row">
