--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 
 					<div class="sponsors-row" data-animation="bounceIn">
 						<h3 style="font-size: 17px;">Ces entreprises / associations soutiennent l'événement !</h3><br>
-						<a href="http://www.hager.com/" target="_blank"><img src="images/contents/hager-group.png" alt="Hager"></a>
+						<a href="http://www.hagergroup.com/" target="_blank"><img src="images/contents/hager-group.png" alt="Hager"></a>
 						<!--<a href="http://www.socomec.fr/Accueil_fr.html" target="_blank"><img src="images/contents/socomec.png" alt="Socomec France"></a>-->
 						<!--<a href="http://www.innovation-in-design.com/" target="_blank"><img src="images/contents/logo IID.jpg" alt="Innovation In Design"></a>-->
 						<a href="http://scalingo.com" target="_blank"><img width="250" src="images/contents/scalingo.svg" alt="Scalingo"></a>
