--- a/index.html
+++ b/index.html
@@ -362,39 +362,48 @@
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
-						<h3 style="font-size: 17px;">Ils prennent également part à l'organisation du HIC :</h3><br>
-						<a href="http://www.rhenatic.eu/" target="_blank"><img src="images/contents/rhenatic.png" alt="Rhénatic"></a>
-						<a href="http://www.alsacetech.org/" target="_blank"><img src="images/contents/alsacetech.jpg" alt="Alsace Tech"></a>
-						<a href="http://www.creaccro.eu/" target="_blank"><img src="images/contents/accro.jpg" alt="Accro"></a>
+						<h3 style="font-size: 17px;">Gold Sponsors</h3><br>
+						<a href="http://www.hagergroup.com/" target="_blank"><img src="images/contents/hager-group.png" alt="Hager"></a>
+						<a href="http://www.socomec.fr/Accueil_fr.html" target="_blank"><img src="images/contents/socomec.png" alt="Socomec France"></a>
 					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
-						<h3 style="font-size: 17px;">Ces entreprises / associations soutiennent l'événement !</h3><br>
-						<a href="http://www.hagergroup.com/" target="_blank"><img src="images/contents/hager-group.png" alt="Hager"></a>
-						<!--<a href="http://www.socomec.fr/Accueil_fr.html" target="_blank"><img src="images/contents/socomec.png" alt="Socomec France"></a>-->
-						<!--<a href="http://www.innovation-in-design.com/" target="_blank"><img src="images/contents/logo IID.jpg" alt="Innovation In Design"></a>-->
-						<a href="http://scalingo.com" target="_blank"><img width="250" src="images/contents/scalingo.svg" alt="Scalingo"></a>
+						<h3 style="font-size: 17px;">Silver Sponsors</h3><br>
+						<a href="http://www.rhenatic.eu/" target="_blank"><img src="images/contents/rhenatic.png" alt="Rhénatic" style="width: 180px;"></a>					
+						<a href="http://www.insa-strasbourg.fr/" target="_blank"><img src="images/contents/insa.png" alt="INSA Strasbourg"></a>	
+					</div>
+					
+					<div class="sponsors-row" data-animation="bounceIn">
+						<h3 style="font-size: 17px;">Ces entreprises / associations / institutions soutiennent l'événement</h3><br>
+						<a href="http://www.alsacetech.org/" target="_blank"><img src="images/contents/alsacetech.jpg" alt="Alsace Tech" style="width: 220px;"></a>
+						<a href="http://www.creaccro.eu/" target="_blank"><img src="images/contents/accro.jpg" alt="Accro"></a>
+						<a href="http://alsace.com/" target="_blank"><img src="images/contents/aaa.jpg" alt="Agence Attractivité Alsace"></a>
+						<a href="http://scalingo.com" target="_blank"><img width="220" src="images/contents/scalingo.svg" alt="Scalingo"></a>
+						<a href="http://strasbourg.eu/" target="_blank"><img src="images/contents/banner-stras.png" alt="Strasbourg.eu"></a>
 						<a href="http://lafab.org" target="_blank"><img src="images/contents/lafabrique.jpg" alt="La Fabrique"></a>
-						<!--<a href="http://cpc-analytics.fr" target="_blank"><img src="images/contents/cpc-analytics.jpg" alt="Cpc Analytics"></a>-->
+						<a href="http://www.lafrenchtech-alsace.eu/" target="_blank"><img src="images/contents/fta-iot-manufacturing.png" alt="La French Tech Alsace"></a>
+						<a href="http://alsace.cci.fr/" target="_blank"><img src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a>
+						<a href="http://adira.com/" target="_blank"><img src="images/contents/adira.png" alt="Adira"></a>
+						<a href="http://maddyness.com/" target="_blank"><img src="images/contents/maddyness.jpg" alt="Maddyness"></a>
+						<a href="http://www.xfive.be/" target="_blank"><img src="images/contents/xfive.jpg" alt="XFive"></a>
+						<a href="http://cpc-analytics.fr" target="_blank"><img src="images/contents/cpc-analytics.jpg" alt="Cpc Analytics"></a>		
+						<a href="http://www.strataggem.com/" target="_blank"><img src="images/contents/strataggem.png" alt="Strataggem"></a>						
+						<!--<a href="http://www.innovation-in-design.com/" target="_blank"><img src="images/contents/logo IID.jpg" alt="Innovation In Design"></a>-->
 						<!--<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>-->
 						<!--<a href="http://prworldmedia.com/" target="_blank"><img src="images/contents/prworldmedia.jpg" alt="PR World Media"></a>-->
 						<!--<a href="http://invitethemedia.com/" target="_blank"><img src="images/contents/invitethemedia.jpg" alt="InviteTheMedia"></a>-->
+						<!--<a href="http://www.etena-univ.eu/" target="_blank"><img src="images/contents/pepite.jpg" alt="Pepite"></a>-->
+						<!--<a href="http://www.etena-univ.eu/" target="_blank"><img src="images/contents/etena.jpg" alt="Etena"></a><br>-->
+					</div>
+
+					<div class="sponsors-row" data-animation="bounceIn">
+						<h3 style="font-size: 17px;"></h3><br>
 						<div class="row">
 							<p>Intéressés pour devenir sponsor ?</p>
 
 							<a target="_blank" href="https://drive.google.com/file/d/0B0S2y3rk51DNNXBySjA1ald6TFE/view" class="btn btn-primary">Présentation HIC</a> &nbsp; <a target="_blank" href="https://drive.google.com/file/d/0B0S2y3rk51DNMGNyNGRyYk9XakU/view?usp=sharing" class="btn btn-primary">Devenir sponsor</a>
 						</div>
 					</div>
-
-					<div class="sponsors-row" data-animation="bounceIn">
-						<h3 style="font-size: 17px;">Ces institutions soutiennent l'événement !</h3><br>
-						<a href="http://strasbourg.eu/" target="_blank"><img src="images/contents/banner-stras.png" alt="Strasbourg.eu"></a>
-						<a href="http://www.insa-strasbourg.fr/" target="_blank"><img src="images/contents/insa.png" alt="INSA Strasbourg"></a>			
-						<!--<a href="http://www.etena-univ.eu/" target="_blank"><img src="images/contents/pepite.jpg" alt="Pepite"></a>-->
-						<!--<a href="http://www.etena-univ.eu/" target="_blank"><img src="images/contents/etena.jpg" alt="Etena"></a><br>-->
-						<a href="http://www.lafrenchtech-alsace.eu/" target="_blank"><img src="images/contents/fta-iot-manufacturing.png" alt="La French Tech Alsace"></a>
-						<a href="http://alsace.cci.fr/" target="_blank"><img src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a>
-					</div>						
 
 				</div>
 
