--- a/index.html
+++ b/index.html
@@ -386,8 +386,9 @@
 						<a href="http://adira.com/" target="_blank"><img src="images/contents/adira.png" alt="Adira"></a>
 						<a href="http://maddyness.com/" target="_blank"><img src="images/contents/maddyness.jpg" alt="Maddyness"></a>
 						<a href="http://www.xfive.be/" target="_blank"><img src="images/contents/xfive.jpg" alt="XFive"></a>
-						<a href="http://cpc-analytics.fr" target="_blank"><img src="images/contents/cpc-analytics.jpg" alt="Cpc Analytics"></a>		
-						<a href="http://www.strataggem.com/" target="_blank"><img src="images/contents/strataggem.png" alt="Strataggem"></a>						
+						<a href="http://cpc-analytics.fr" target="_blank"><img src="images/contents/cpc-analytics.jpg" alt="Cpc Analytics"></a>
+						<a href="http://duipi.unistra.fr/" target="_blank"><img src="images/contents/ipi.png" alt="IPI"></a>
+						<a href="http://www.strataggem.com/" target="_blank"><img src="images/contents/strataggem.png" alt="Strataggem"></a>
 						<!--<a href="http://www.innovation-in-design.com/" target="_blank"><img src="images/contents/logo IID.jpg" alt="Innovation In Design"></a>-->
 						<!--<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>-->
 						<!--<a href="http://prworldmedia.com/" target="_blank"><img src="images/contents/prworldmedia.jpg" alt="PR World Media"></a>-->
@@ -499,34 +500,33 @@
 
 					<div class="row">
 						<div class="about-text col-md-6">
-							<h3>Samedi 10 octobre de 11h à 12h</h3>
+							<h3>Samedi 15 octobre de 11h à 12h</h3>
 							<img src="images/contents/keynote-fabrique.jpg" style="width: 100%;" alt="Keynote Fablab" title="Keynote Fablab" />
 
-							<h3>L'aventure d'un centre de production partagé ou Fablab</h3>
+							<h3>Industrie 4.0 : une utopie allemande ?</h3>
 
-							<p class="lead" style="font-size: 18px;">L'ouverture d'un Fablab est souvent l'aboutissement d'un projet humain individuel et collectif de longue haleine. Nous vous presenterons l'histoire du centre de production partage la fabrique.</p>
-							<p style="margin-bottom: 50px;">Présentée par François Kormann de La Fabrique</p>
-							
-							<img src="images/contents/keynote-iot.jpg" style="width: 100%;" alt="Keynote objets connectés" title="Les objets connectés" />
-							
-							<h3>Introduction aux objets connectés</h3>
+							<p class="lead" style="font-size: 18px;">Dès l’origine, Industrie 4.0 se présente comme un rêve technologique : une application de l’internet des objets au monde des biens d’équipement. Le projet Industrie 4.0 vise ni plus ni moins à dessiner les contours d’une 4ème révolution industrielle portée par la vision d’une mise en réseau de tous les éléments du processus de production pour construire l’usine ultra-connectée du futur, baptisée integrated industry, smart factory ou encore digital factory.<br>
+							À travers ses expériences, Jean-Daniel Weisz, associé du Cabinet propose des clés pour comprendre comment l’État et les industries allemandes s'adaptent à la numérisation des processus industriels. En constatant que le changement fait aujourd'hui partie intégrante de la dynamique d'entreprise, celui-ci n'est plus perçu comme une phase d'incertitude, mais est conçu comme un avantage compétitif qui crée de la valeur. En France sommes-nous prêts à de telles modifications ? Pouvons-nous saisir cette opportunité de différenciation conjointement avec nos voisins d'Outre-Rhin ?<br>
+							Le cabinet Kohler C&amp;C, experts en stratégie de transformation et en développement des organisations et auteur de l'ouvrage éponyme, a notamment collaboré avec la BPI sur le rapport « Industrie 4.0 : quelles stratégies numériques ? La numérisation de l’industrie dans les entreprises du Mittelstand allemand ».</p>
+							<p>Présentée par</p>
 
-							<p class="lead" style="font-size: 18px;">Qu'est-ce qu'un objet connecté ? Quelles sont les technologies actuellement à votre disposition ?</p>
-
-							<p style="margin-bottom: 35px;">Présentée par la startup <a href="http://strataggem.com" target="_blank">Strataggem</a></p>
-
-
+							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="#" class="btn btn-primary">J'y vais !</a></div>
 						</div>
+
 						<div class="about-text col-md-6">
-							<h3>Samedi 10 octobre de 14h à 15h</h3>
+							<h3>Samedi 15 octobre de 17h à 18h</h3>
 
 							<img src="images/contents/keynote-usine4-0.jpg" style="width: 100%;" alt="Keynote Usine 4.0" title="Keynote Usine 4.0" />
 
 							<h3>Introduction aux concepts de l'usine du futur : fondamentaux, usages et implications opérationnelles.</h3>
 
-							<p class="lead" style="font-size: 18px;">Cette rencontre a pour objectif de présenter les caractéristiques de ce qu'on appelle la 4ème révolution industrielle du point de vue des systèmes de production. Qu'est-ce qui la distingue des précédentes révolutions industrielles, comment se matérialisent les applications qui en découlent et quels sont les points critiques d'adoption des nouveaux usages ?</p>
-							<p>Présentée par Guillaume Lillig de CPC Analytics</p>
-							<p>15 mn de conférence introductive puis échanges</p>
+							<p class="lead" style="font-size: 18px;">« Comment jauger une idée, comment s'en emparer, comment trouver les bons soutiens, la bonne structuration... », voilà la ligne directrice de ce passionné de sciences et d'informatiques devenu entrepreneur. <br>
+							Après avoir occupé plusieurs postes aux diverses responsabilités dans de grandes entreprises et avoir créer sa propre entreprise, il entre en 2014 à l'Inria, établissement de recherche dédié aux sciences du numérique. Il y exercera en tant que chargé des partenariats et de la propriété intellectuelle jusqu'à récemment. Suite à la campagne « Horizon Start-up » de 2015, organisée par l'Inria et qui avait pour objectif d'attirer l'attention des chercheurs vers la création d'entreprise, Arnaud Laprévote décide lui aussi de se lancer dans l'aventure entrepreneuriale en créant début 2016, Lybero.net. Ce système innovant qui permet de protéger des données par une technologie de chiffrement contenant une clé de recouvrement à seuil sonnera peut-être le glas de la cybercriminalité. </p>
+							<p>
+								Présentée par Arnaud Laprévote, Fondateur de Lybero.net<br>
+							</p>
+
+							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="#" class="btn btn-primary">J'y vais !</a></div>
 						</div>
 
 					</div>
@@ -534,6 +534,7 @@
 				</div>
 
 			</section>-->
+
 			<!-- TEAM
 			================================= -->
 			<!--<section id="coachs" class="team-section section">
