--- a/index.html
+++ b/index.html
@@ -237,6 +237,54 @@
 									<div class="col-md-12 text-center" style="margin-bottom: 20px;">
 										<div id="fb-root"></div><script>(function(d, s, id) {  var js, fjs = d.getElementsByTagName(s)[0];  if (d.getElementById(id)) return;  js = d.createElement(s); js.id = id;  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";  fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script><div class="fb-video" data-allowfullscreen="1" data-href="https://www.facebook.com/alsace.digitale/videos/1168785789802934/"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/alsace.digitale/videos/1168785789802934/"><a href="https://www.facebook.com/alsace.digitale/videos/1168785789802934/">Encouragement Gilles Babinet HICamp www.hackingindustry.camp</a><p>#Gift les encouragements de  Gilles Babinet pour le Hacking industry Camp ! On adore.</p>Posted by <a href="https://www.facebook.com/alsace.digitale">Alsace Digitale</a> on Friday, October 2, 2015</blockquote></div></div>
 									</div>
+
+
+									<div class="col-md-12">
+										<div class="testimonial-slider-row row" style="padding-top: 80px;">
+
+											<div class="col-md-8 col-md-offset-2">
+
+												<ul class="testimonial-slider rslides" data-speed="800" data-timeout="4000" data-auto="false">
+
+													<!-- TESTIMONIAL ITEM 1 -->
+													<li class="testimonial-slide">
+														<blockquote class="testimonial-quote">
+															<p>C'est la troisième révolution industrielle. Je défends l'idée qu'il y a eu un changement massif de paradigme qui nécessite une culture économique, sociale, industrielle différente, qui a bouleversé notre économie et l'organisation de la société.</p>
+														</blockquote>
+														<cite class="testimonial-cite">Gilles Babinet, Digital Champion</cite>
+													</li>
+
+													<!-- TESTIMONIAL ITEM 2 -->
+													<div class="testimonial-slide">
+														<blockquote class="testimonial-quote">
+															<p>A mesure que le quotidien s’informatise, se numérise, se robotise, l’innovation fait naître, assez paradoxalement, une  phénoménale bouffée collaborative.</p>
+														</blockquote>
+														<cite class="testimonial-cite">Jean Paul Viart, Humanoides</cite>
+													</div>
+
+													<!-- TESTIMONIAL ITEM 3 -->
+													<li class="testimonial-slide">
+														<blockquote class="testimonial-quote">
+															<p>L'innovation consiste à socialiser des inventions technologiques, elles-mêmes issues de découvertes scientifiques. Innover, c'est produire du nouveau (méthodes, objets, services) pour l'installer sur un marché.</p>
+														</blockquote>
+														<cite class="testimonial-cite">Bernard Stiegler, Ars Industrialis</cite>
+													</li>
+
+													<!-- TESTIMONIAL ITEM 4 -->
+													<div class="testimonial-slide">
+														<blockquote class="testimonial-quote">
+															<p>Des prévisions réalisées par Cisco indiquent que d’ici 2022, l’Internet des Objets générera 14,4 000 milliards de dollars en bénéfices et revenus. Une autre étude de General Electric publiée en novembre 2012 conclut que les gains en efficacité et productivité induits par un système industriel digitalisé rejailliront sur tous les secteurs économiques d’ici 2025, impactant approximativement une moitié de l’économie globale.</p>
+														</blockquote>
+														<cite class="testimonial-cite">Jeremy Rifkin, Economiste</cite>
+													</div>
+
+												</ul>
+
+											</div>
+
+										</div>
+									</div>
+
 								</div>
 							</div>
 						</div>
@@ -295,9 +343,9 @@
 
 			</section>
 
-			<!-- TESTIMONIAL SLIDER
+			<!-- SPONSORS
 			================================= -->
-			<section id="sponsors" class="testimonial-slider-section section-dark section">
+			<section id="sponsors" class="section-dark section" style="padding-bottom: 30px; padding-top: 30px;">
 
 				<div class="section-background">
 
@@ -311,50 +359,6 @@
 				<div class="container">
 
 					<h2 class="section-heading text-center hidden">Partenaires et sponsors</h2>
-
-					<div class="testimonial-slider-row row">
-
-						<div class="col-md-8 col-md-offset-2">
-
-							<ul class="testimonial-slider rslides" data-speed="800" data-timeout="4000" data-auto="false">
-
-								<!-- TESTIMONIAL ITEM 1 -->
-								<li class="testimonial-slide">
-									<blockquote class="testimonial-quote">
-										<p>C'est la troisième révolution industrielle. Je défends l'idée qu'il y a eu un changement massif de paradigme qui nécessite une culture économique, sociale, industrielle différente, qui a bouleversé notre économie et l'organisation de la société.</p>
-									</blockquote>
-									<cite class="testimonial-cite">Gilles Babinet, Digital Champion</cite>
-								</li>
-
-								<!-- TESTIMONIAL ITEM 2 -->
-								<div class="testimonial-slide">
-									<blockquote class="testimonial-quote">
-										<p>A mesure que le quotidien s’informatise, se numérise, se robotise, l’innovation fait naître, assez paradoxalement, une  phénoménale bouffée collaborative.</p>
-									</blockquote>
-									<cite class="testimonial-cite">Jean Paul Viart, Humanoides</cite>
-								</div>
-
-								<!-- TESTIMONIAL ITEM 3 -->
-								<li class="testimonial-slide">
-									<blockquote class="testimonial-quote">
-										<p>L'innovation consiste à socialiser des inventions technologiques, elles-mêmes issues de découvertes scientifiques. Innover, c'est produire du nouveau (méthodes, objets, services) pour l'installer sur un marché.</p>
-									</blockquote>
-									<cite class="testimonial-cite">Bernard Stiegler, Ars Industrialis</cite>
-								</li>
-
-								<!-- TESTIMONIAL ITEM 4 -->
-								<div class="testimonial-slide">
-									<blockquote class="testimonial-quote">
-										<p>Des prévisions réalisées par Cisco indiquent que d’ici 2022, l’Internet des Objets générera 14,4 000 milliards de dollars en bénéfices et revenus. Une autre étude de General Electric publiée en novembre 2012 conclut que les gains en efficacité et productivité induits par un système industriel digitalisé rejailliront sur tous les secteurs économiques d’ici 2025, impactant approximativement une moitié de l’économie globale.</p>
-									</blockquote>
-									<cite class="testimonial-cite">Jeremy Rifkin, Economiste</cite>
-								</div>
-
-							</ul>
-
-						</div>
-
-					</div>
 
 					<div class="sponsors-row" data-animation="bounceIn">
 						<p style="font-size: 17px;">Dans le cadre de son soutien au Hacking Industry Camp, le Groupe ÉS est partie prenante de l'organisation de l'évènement.</p><br>
