--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 							<li><a href="#about">A Propos</a></li>
 							<li><a href="#sponsors">Partenaires</a></li>
 							<li><a href="#how-it-works">Déroulement</a></li>
+							<li><a href="#keynotes">Keynotes</a></li>
 							<!--
-								<li><a href="#keynotes">Keynotes</a></li>
 								<li><a href="#coachs">Coachs &amp; Jury</a>
 								<li><a href="#prizes">Prix</a>
 								<li><a href="#winners">Résultats</a>
@@ -490,11 +490,11 @@
 				</div>
 			</section>-->
 
-			<!--<section id="keynotes" class="section section-dark">
+			<section id="keynotes" class="section section-dark">
 				
 				<div class="section-background">
 					<div class="section-background-image parallax" data-stellar-ratio="0.4">
-						<img src="images/backgrounds/background-keynote.jpg" alt="" style="opacity: 0.08;">
+						<img src="images/backgrounds/background-keynote-hic.jpg" alt="" style="opacity: 0.08;">
 					</div>
 				</div>
 
@@ -506,39 +506,53 @@
 					<div class="row">
 						<div class="about-text col-md-6">
 							<h3>Samedi 15 octobre de 11h à 12h</h3>
-							<img src="images/contents/keynote-fabrique.jpg" style="width: 100%;" alt="Keynote Fablab" title="Keynote Fablab" />
+							<img src="images/contents/keynote-industrie4-0.jpg" style="width: 100%;" alt="Keynote Fablab" title="Keynote Industrie 4.0 : une utopie allemande ?" />
 
 							<h3>Industrie 4.0 : une utopie allemande ?</h3>
+							
+							<div class="lead">
+								<p style="font-size: 18px;">Dès l’origine, Industrie 4.0 se présente comme un rêve technologique : une application de l’internet des objets au monde des biens d’équipement. Le projet Industrie 4.0 vise ni plus ni moins à dessiner les contours d’une 4ème révolution industrielle portée par la vision d’une mise en réseau de tous les éléments du processus de production pour construire l’usine ultra-connectée du futur, baptisée integrated industry, smart factory ou encore digital factory.</p>
+								<div class="read_more">
+									<a href="javascript:void(0)" class="read_more_button">En savoir plus</a>
+									<div class="read_more_content">
+										<p>À travers ses expériences, Jean-Daniel Weisz, associé du Cabinet Kohler C&amp;C, propose des clés pour comprendre comment l’État et les industries allemandes s'adaptent à la numérisation des processus industriels. En constatant que le changement fait aujourd'hui partie intégrante de la dynamique d'entreprise, celui-ci n'est plus perçu comme une phase d'incertitude, mais est conçu comme un avantage compétitif qui crée de la valeur. En France sommes-nous prêts à de telles modifications ? Pouvons-nous saisir cette opportunité de différenciation conjointement avec nos voisins d'Outre-Rhin ?<br>							Le cabinet Kohler C&amp;C, experts en stratégie de transformation et en développement des organisations et auteur de l'ouvrage éponyme, a notamment collaboré avec la BPI sur le rapport « Industrie 4.0 : quelles stratégies numériques ? La numérisation de l’industrie dans les entreprises du Mittelstand allemand ».</p>
+									</div>
+								</div>
+							</div>
+							<p style="margin-bottom: 0;">Présentée par Jean-Daniel Weisz, associé du <a href="http://kohler-cc.com/industrie-4-0/" target="_blank">Cabinet Kohler C&amp;C</a></p>
+							<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://adira.com/" target="_blank"><img style="height: 40px;" src="images/contents/adira.png" alt="Adira"></a></p>
 
-							<p class="lead" style="font-size: 18px;">Dès l’origine, Industrie 4.0 se présente comme un rêve technologique : une application de l’internet des objets au monde des biens d’équipement. Le projet Industrie 4.0 vise ni plus ni moins à dessiner les contours d’une 4ème révolution industrielle portée par la vision d’une mise en réseau de tous les éléments du processus de production pour construire l’usine ultra-connectée du futur, baptisée integrated industry, smart factory ou encore digital factory.<br>
-							À travers ses expériences, Jean-Daniel Weisz, associé du Cabinet propose des clés pour comprendre comment l’État et les industries allemandes s'adaptent à la numérisation des processus industriels. En constatant que le changement fait aujourd'hui partie intégrante de la dynamique d'entreprise, celui-ci n'est plus perçu comme une phase d'incertitude, mais est conçu comme un avantage compétitif qui crée de la valeur. En France sommes-nous prêts à de telles modifications ? Pouvons-nous saisir cette opportunité de différenciation conjointement avec nos voisins d'Outre-Rhin ?<br>
-							Le cabinet Kohler C&amp;C, experts en stratégie de transformation et en développement des organisations et auteur de l'ouvrage éponyme, a notamment collaboré avec la BPI sur le rapport « Industrie 4.0 : quelles stratégies numériques ? La numérisation de l’industrie dans les entreprises du Mittelstand allemand ».</p>
-							<p>Présentée par</p>
-
-							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="#" class="btn btn-primary">J'y vais !</a></div>
+							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="http://www.eventbrite.com/e/conference-1-hacking-industry-camp-lindustrie-4o-une-utopie-allemande-tickets-27727464593" target="_blank" class="btn btn-primary">J'y vais !</a></div>
 						</div>
 
 						<div class="about-text col-md-6">
 							<h3>Samedi 15 octobre de 17h à 18h</h3>
 
-							<img src="images/contents/keynote-usine4-0.jpg" style="width: 100%;" alt="Keynote Usine 4.0" title="Keynote Usine 4.0" />
+							<img src="images/contents/keynote-oser-innover.jpg" style="width: 100%;" alt="Keynote Usine 4.0" title="Keynote Oser innover" />
 
-							<h3>Introduction aux concepts de l'usine du futur : fondamentaux, usages et implications opérationnelles.</h3>
+							<h3>Oser innover</h3>
 
-							<p class="lead" style="font-size: 18px;">« Comment jauger une idée, comment s'en emparer, comment trouver les bons soutiens, la bonne structuration... », voilà la ligne directrice de ce passionné de sciences et d'informatiques devenu entrepreneur. <br>
-							Après avoir occupé plusieurs postes aux diverses responsabilités dans de grandes entreprises et avoir créer sa propre entreprise, il entre en 2014 à l'Inria, établissement de recherche dédié aux sciences du numérique. Il y exercera en tant que chargé des partenariats et de la propriété intellectuelle jusqu'à récemment. Suite à la campagne « Horizon Start-up » de 2015, organisée par l'Inria et qui avait pour objectif d'attirer l'attention des chercheurs vers la création d'entreprise, Arnaud Laprévote décide lui aussi de se lancer dans l'aventure entrepreneuriale en créant début 2016, Lybero.net. Ce système innovant qui permet de protéger des données par une technologie de chiffrement contenant une clé de recouvrement à seuil sonnera peut-être le glas de la cybercriminalité. </p>
+							<div class="lead">
+								<p style="font-size: 18px;">« Comment jauger une idée, comment s'en emparer, comment trouver les bons soutiens, la bonne structuration... », voilà la ligne directrice de ce passionné de sciences et d'informatiques devenu entrepreneur. </p>
+								<div class="read_more">
+									<a href="javascript:void(0)" class="read_more_button">En savoir plus</a>
+									<div class="read_more_content">
+										<p>Après avoir occupé plusieurs postes aux diverses responsabilités dans de grandes entreprises et avoir créer sa propre entreprise, il entre en 2014 à l'Inria, établissement de recherche dédié aux sciences du numérique. Il y exercera en tant que chargé des partenariats et de la propriété intellectuelle jusqu'à récemment. Suite à la campagne « Horizon Start-up » de 2015, organisée par l'Inria et qui avait pour objectif d'attirer l'attention des chercheurs vers la création d'entreprise, Arnaud Laprévote décide lui aussi de se lancer dans l'aventure entrepreneuriale en créant début 2016, Lybero.net. Ce système innovant qui permet de protéger des données par une technologie de chiffrement contenant une clé de recouvrement à seuil sonnera peut-être le glas de la cybercriminalité.</p>
+									</div>
+								</div>
+							</div>
 							<p>
-								Présentée par Arnaud Laprévote, Fondateur de Lybero.net<br>
+								Présentée par Arnaud Laprévote, Fondateur de <a href="http://lybero.net" target="_blank">Lybero.net</a><br>
 							</p>
 
-							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="#" class="btn btn-primary">J'y vais !</a></div>
+							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-2-hacking-industry-camp-oser-innover-27727494683" target="_blank" class="btn btn-primary">J'y vais !</a></div>
 						</div>
 
 					</div>
 
 				</div>
 
-			</section>-->
+			</section>
 
 			<!-- TEAM
 			================================= -->
