--- a/index.html
+++ b/index.html
@@ -374,7 +374,9 @@
 					<div class="sponsors-row" data-animation="bounceIn">
 						<h3 style="font-size: 17px;">Silver Sponsors</h3><br>
 						<a href="http://www.rhenatic.eu/" target="_blank"><img src="images/contents/rhenatic.png" alt="Rhénatic" style="width: 180px;"></a>					
-						<a href="http://www.insa-strasbourg.fr/" target="_blank"><img src="images/contents/insa.png" alt="INSA Strasbourg"></a>	
+						<a href="http://www.insa-strasbourg.fr/" target="_blank"><img src="images/contents/insa.png" alt="INSA Strasbourg"></a>
+						<a href="http://www.alsacechampagneardennelorraine.eu/" target="_blank"><img src="images/contents/regiongrandest.png" alt="Région Grand Est"></a>
+						<a href="http://europe-en-alsace.eu/" target="_blank"><img src="images/contents/feder.png" alt="L'Europe s'engage en Alsace - Feder"></a>
 					</div>
 					
 					<div class="sponsors-row" data-animation="bounceIn">
