--- a/index.html
+++ b/index.html
@@ -547,6 +547,7 @@
 							<p>
 								Présentée par Arnaud Laprévote, Fondateur de <a href="http://lybero.net" target="_blank">Lybero.net</a><br>
 							</p>
+							<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/" target="_blank"><img style="height: 33px;" src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a></p>
 
 							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-2-hacking-industry-camp-oser-innover-27727494683" target="_blank" class="btn btn-primary">J'y vais !</a></div>
 						</div>
