--- a/index.html
+++ b/index.html
@@ -397,6 +397,7 @@
 						<a href="http://duipi.unistra.fr/" target="_blank"><img src="images/contents/ipi.png" alt="IPI"></a>
 						<a href="http://www.strataggem.com/" target="_blank"><img src="images/contents/strataggem.png" alt="Strataggem"></a>
 						<a href="http://innovationweek.fr/" target="_blank"><img src="images/contents/innoweek.png" alt="Innoweek"></a>
+						<a href="http://marque.alsace/" target="_blank"><img src="images/contents/acoeur.png" alt="Marque Alsace"></a>
 						<!--<a href="http://www.innovation-in-design.com/" target="_blank"><img src="images/contents/logo IID.jpg" alt="Innovation In Design"></a>-->
 						<!--<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>-->
 						<!--<a href="http://prworldmedia.com/" target="_blank"><img src="images/contents/prworldmedia.jpg" alt="PR World Media"></a>-->
