--- a/index.html
+++ b/index.html
@@ -144,9 +144,10 @@
 
 									<h1 class="hero-title">Hacking Industry Camp</h1>
 
-									<p class="hero-tagline">Inventer l'énergie de demain !</p>
+									<p class="hero-tagline">Donnez de l'énergie à vos défis !</p>
 
 								</div>
+
 							</div>
 
 
