--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 									<div class="video-embed">
 
 										<!-- VIDEO EMBED FROM YOUTUBE -->
-										<iframe width="560" height="315" src="https://www.youtube.com/embed/PyeARmlLkCw" frameborder="0" allowfullscreen></iframe>
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/8mul8X4uLsQ" frameborder="0" allowfullscreen></iframe>
 
 									</div>
 
